ui_tests/tests/name_resolution/multiple-undefined1.stderr
error[E021]: binding `Nothing` is not defined in module `crate.alpha`
 --> ${DIRECTORY}/name_resolution/multiple-undefined1.lushui:4:11
  |
4 | use alpha.Nothing
  |           ^^^^^^^ 
  |

error[E021]: binding `Air` is not defined in module `crate`
 --> ${DIRECTORY}/name_resolution/multiple-undefined1.lushui:7:24
  |
7 |     Thin: Type = super.Air
  |                        ^^^ 
  |

error[E021]: binding `Air` is not defined in module `crate`
 --> ${DIRECTORY}/name_resolution/multiple-undefined1.lushui:8:15
  |
8 |     use super.Air
  |               ^^^ 
  |

error[E021]: binding `empty` is not defined in module `crate`
 --> ${DIRECTORY}/name_resolution/multiple-undefined1.lushui:9:15
  |
9 |     use crate.empty as full
  |               ^^^^^ 
  |

error[E021]: binding `air` is not defined in module `crate.alpha`
  --> ${DIRECTORY}/name_resolution/multiple-undefined1.lushui:12:19
   |
12 |         use super.air
   |                   ^^^ 
   |
  help: a binding with a similar name exists in scope: `Air` ([91ma[0m[92mA[0mir)

error[E021]: binding `Nothingness` is not defined in module `crate.alpha`
  --> ${DIRECTORY}/name_resolution/multiple-undefined1.lushui:14:12
   |
14 | use alpha.(Nothingness beta.space)
   |            ^^^^^^^^^^^ 
   |

error[E029]: binding `crate.alpha.beta` is private
  --> ${DIRECTORY}/name_resolution/multiple-undefined1.lushui:14:24
   |
14 | use alpha.(Nothingness beta.space)
   |                        ^^^^ 
   |

error: aborting due to 7 previous errors

